--- a/package.json
+++ b/package.json
@@ -168,46 +168,46 @@
   "devDependencies": {
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "9.2.6",
-    "@semantic-release/npm": "11.0.3",
-    "@semantic-release/release-notes-generator": "12.1.0",
+    "@semantic-release/github": "10.1.1",
+    "@semantic-release/npm": "12.0.1",
+    "@semantic-release/release-notes-generator": "14.0.1",
     "@types/dateformat": "5.0.2",
     "@types/jest": "29.5.12",
-    "@typescript-eslint/eslint-plugin": "7.2.0",
-    "@typescript-eslint/parser": "7.2.0",
+    "@typescript-eslint/eslint-plugin": "7.16.1",
+    "@typescript-eslint/parser": "7.16.1",
     "commitizen": "4.3.0",
-    "commitlint": "19.0.3",
+    "commitlint": "19.3.0",
     "commitlint-config-gitmoji": "2.3.1",
     "concurrently": "8.2.2",
     "conventional-changelog-gitmoji-config": "1.5.2",
     "cz-gitmoji-adapter": "2.0.0",
-    "eslint": "8.57.0",
+    "eslint": "8.56.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "18.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jest": "27.9.0",
+    "eslint-plugin-jest": "28.6.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-security": "2.1.1",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-security": "3.0.1",
     "five-server": "0.3.3",
-    "husky": "9.0.11",
+    "husky": "9.1.1",
     "jest": "29.7.0",
     "jest-snapshot": "29.7.0",
     "license-checker": "25.0.1",
-    "nodemon": "3.1.0",
-    "npm-check": "^6.0.1",
-    "oxlint": "^0.2.13",
-    "prettier": "3.2.5",
-    "prettier-plugin-organize-imports": "3.2.4",
+    "nodemon": "3.1.4",
+    "npm-check": "6.0.1",
+    "oxlint": "0.6.1",
+    "prettier": "3.3.3",
+    "prettier-plugin-organize-imports": "4.0.0",
     "quick-lint-js": "3.2.0",
     "semantic-release": "<23",
     "semantic-release-config-gitmoji": "1.5.3",
     "semantic-release-gitmoji": "1.6.5",
-    "snyk": "^1.1283.0",
-    "sort-package-json": "2.8.0",
-    "ts-jest": "29.1.2",
-    "typedoc": "0.25.12",
+    "snyk": "1.1292.1",
+    "sort-package-json": "2.10.0",
+    "ts-jest": "29.2.3",
+    "typedoc": "0.26.4",
     "typedoc-plugin-coverage": "3.3.0"
   },
   "publishConfig": {
