--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-security": "3.0.1",
     "five-server": "0.3.3",
+    "gitmoji-parser-opts": "^1.0.0",
     "husky": "9.1.1",
     "jest": "29.7.0",
     "jest-snapshot": "29.7.0",
