:sparkles: feature(repo_management_files/extractfilescopes.js): created an automatic scope updater script
adds new scopes of all the non auto generated files in the repo

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "build:devdeps2": "grep -Fxv -f <(cat d) <(cat dd) | awk '{print $1 > \"dd\"}'",
     "build:devdeps:badges": "bun run build:deps && bun run build:devdeps1 && bun run build:devdeps2 && cat dd | xargs npx update-badge --behind  && rm d dd",
     "clean": "rm -rf node_modules",
-    "cm": "git pull && git add . && bun git:all &&  cz",
+    "cm": "git pull && node repo_management_files/extractFileScopes.js && git add . && bun git:all &&  cz",
     "dep:check": "bunx upgradeps && npm outdated | xargs && bunx npm-check-updates && bunx check-dependencies && bun ./node_modules/npm-check/bin/cli.js -s | xargs && npm audit",
     "dep:skip": "bunx upgradeps -s semantic-release",
     "dep:update:all": "bunx upgradeps -u -f -s semantic-release,eslint",
@@ -133,27 +133,76 @@
         ".depcheckrc.json",
         ".eslintignore",
         ".eslintrc.json",
-        ".git",
         ".gitignore",
-        ".husky/commit-msg",
-        ".husky/prepare-commit-msg",
         ".prettierignore",
+        "license",
+        "readme.md",
         ".prettierrc.json",
         "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
-        ".husky/commit-msg",
-        ".husky/prepare-commit-msg",
         "jest.config.json",
-        "license",
+        "package-lock.json",
         "package.json",
-        "readme.md",
         "release.config.ts",
         "renovate.json",
-        "src/cz-type-extract.js",
-        "src/gitmojiSemVer-Extract.js",
         "tsconfig.json",
-        "typedoc.json"
+        "typedoc.json",
+        ".vscode/settings.json",
+        "public/.gitkeep",
+        "repo_management_files/cz-emoji-type-extract.js",
+        "repo_management_files/cz-type-extract.js",
+        "repo_management_files/directorystructuredocument.md",
+        "repo_management_files/extractfilescopes.js",
+        "repo_management_files/genericcommitmessages.md",
+        "repo_management_files/issues.sh",
+        "repo_management_files/labels.sh",
+        "repo_management_files/gitmojisemver-extract.js",
+        "repo_management_files/packagejsondocument.md",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
+        ".husky/commit-msg",
+        ".husky/prepare-commit-msg",
+        ".husky/_/.gitignore",
+        ".husky/_/applypatch-msg",
+        ".husky/_/commit-msg",
+        ".husky/_/h",
+        ".husky/_/post-applypatch",
+        ".husky/_/post-checkout",
+        ".husky/_/post-merge",
+        ".husky/_/post-commit",
+        ".husky/_/post-rewrite",
+        ".husky/_/pre-auto-gc",
+        ".husky/_/pre-commit",
+        ".husky/_/pre-push",
+        ".husky/_/pre-applypatch",
+        ".husky/_/pre-rebase",
+        ".husky/_/prepare-commit-msg",
+        "test/.gitkeep",
+        "test/bin/.gitkeep",
+        "test/configs/.gitkeep",
+        "test/controllers/.gitkeep",
+        "test/routes/.gitkeep",
+        "test/plugins/.gitkeep",
+        "test/utils/.gitkeep",
+        "test/models/.gitkeep",
+        "test/middleware/.gitkeep",
+        "test/views/.gitkeep",
+        "src/app.ts",
+        "src/configs/.gitkeep",
+        "src/bin/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/utils/.gitkeep",
+        "src/views/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/models/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
