:sparkles: feature(repo_management_files/extractfilescopes.js): created an automatic scope updater script
adds new scopes of all the non auto generated files in the repo

--- a/package.json
+++ b/package.json
@@ -135,9 +135,9 @@
         ".eslintrc.json",
         ".gitignore",
         ".prettierignore",
+        ".prettierrc.json",
         "license",
         "readme.md",
-        ".prettierrc.json",
         "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
@@ -146,63 +146,63 @@
         "package.json",
         "release.config.ts",
         "renovate.json",
-        "tsconfig.json",
         "typedoc.json",
-        ".vscode/settings.json",
+        "tsconfig.json",
         "public/.gitkeep",
+        ".vscode/settings.json",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
         "repo_management_files/genericcommitmessages.md",
-        "repo_management_files/issues.sh",
-        "repo_management_files/labels.sh",
         "repo_management_files/gitmojisemver-extract.js",
+        "repo_management_files/issues.sh",
         "repo_management_files/packagejsondocument.md",
+        "repo_management_files/labels.sh",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
+        ".github/workflows/lint.yml",
         ".github/workflows/docs.yml",
         ".github/workflows/pr.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/release.yml",
         ".github/workflows/test.yml",
+        ".github/workflows/release.yml",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
-        ".husky/_/commit-msg",
         ".husky/_/h",
-        ".husky/_/post-applypatch",
+        ".husky/_/commit-msg",
         ".husky/_/post-checkout",
-        ".husky/_/post-merge",
+        ".husky/_/post-applypatch",
         ".husky/_/post-commit",
         ".husky/_/post-rewrite",
+        ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
-        ".husky/_/pre-push",
-        ".husky/_/pre-applypatch",
         ".husky/_/pre-rebase",
+        ".husky/_/pre-push",
         ".husky/_/prepare-commit-msg",
+        ".husky/_/post-merge",
         "test/.gitkeep",
         "test/bin/.gitkeep",
         "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
-        "test/routes/.gitkeep",
         "test/plugins/.gitkeep",
+        "test/views/.gitkeep",
         "test/utils/.gitkeep",
         "test/models/.gitkeep",
+        "test/routes/.gitkeep",
         "test/middleware/.gitkeep",
-        "test/views/.gitkeep",
         "src/app.ts",
-        "src/configs/.gitkeep",
-        "src/bin/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/plugins/.gitkeep",
         "src/controllers/.gitkeep",
+        "src/bin/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/models/.gitkeep",
         "src/utils/.gitkeep",
-        "src/views/.gitkeep",
         "src/routes/.gitkeep",
-        "src/models/.gitkeep"
+        "src/views/.gitkeep",
+        "src/plugins/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
