:bulb: docs-code(repo_management_files/extractfilescopes.js): renamed and documented extracfilescopes.js
rename functions and edited the document blocks to reflect the changes

--- a/package.json
+++ b/package.json
@@ -146,10 +146,10 @@
         "package.json",
         "release.config.ts",
         "renovate.json",
-        "typedoc.json",
         "tsconfig.json",
-        "public/.gitkeep",
+        "typedoc.json",
         ".vscode/settings.json",
+        "public/.gitkeep",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
@@ -157,52 +157,52 @@
         "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
-        "repo_management_files/packagejsondocument.md",
         "repo_management_files/labels.sh",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/test.yml",
-        ".github/workflows/release.yml",
+        "repo_management_files/packagejsondocument.md",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
-        ".husky/_/h",
         ".husky/_/commit-msg",
-        ".husky/_/post-checkout",
         ".husky/_/post-applypatch",
+        ".husky/_/post-checkout",
         ".husky/_/post-commit",
+        ".husky/_/h",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
+        ".husky/_/post-merge",
         ".husky/_/pre-commit",
         ".husky/_/pre-rebase",
-        ".husky/_/pre-push",
         ".husky/_/prepare-commit-msg",
-        ".husky/_/post-merge",
+        ".husky/_/pre-push",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
+        "src/app.ts",
+        "src/bin/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/models/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/utils/.gitkeep",
+        "src/views/.gitkeep",
         "test/.gitkeep",
         "test/bin/.gitkeep",
         "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
         "test/plugins/.gitkeep",
-        "test/views/.gitkeep",
-        "test/utils/.gitkeep",
         "test/models/.gitkeep",
+        "test/views/.gitkeep",
         "test/routes/.gitkeep",
         "test/middleware/.gitkeep",
-        "src/app.ts",
-        "src/controllers/.gitkeep",
-        "src/bin/.gitkeep",
-        "src/configs/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/models/.gitkeep",
-        "src/utils/.gitkeep",
-        "src/routes/.gitkeep",
-        "src/views/.gitkeep",
-        "src/plugins/.gitkeep"
+        "test/utils/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
