--- a/package.json
+++ b/package.json
@@ -131,8 +131,8 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintignore",
         ".eslintrc.json",
+        ".eslintignore",
         ".gitignore",
         ".prettierignore",
         ".prettierrc.json",
@@ -141,11 +141,12 @@
         "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
-        "jest.config.json",
+        "emojitypescommitmessages.txt",
         "package-lock.json",
         "package.json",
-        "release.config.ts",
+        "jest.config.json",
         "renovate.json",
+        "release.config.ts",
         "tsconfig.json",
         "typedoc.json",
         ".vscode/settings.json",
@@ -159,35 +160,35 @@
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
+        ".husky/_/h",
         ".husky/_/post-applypatch",
         ".husky/_/post-checkout",
         ".husky/_/post-commit",
-        ".husky/_/h",
+        ".husky/_/post-merge",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
-        ".husky/_/post-merge",
         ".husky/_/pre-commit",
+        ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
-        ".husky/_/pre-push",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
         "src/app.ts",
         "src/bin/.gitkeep",
+        "src/configs/.gitkeep",
         "src/controllers/.gitkeep",
         "src/middleware/.gitkeep",
-        "src/configs/.gitkeep",
         "src/models/.gitkeep",
         "src/plugins/.gitkeep",
         "src/routes/.gitkeep",
@@ -197,12 +198,12 @@
         "test/bin/.gitkeep",
         "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
-        "test/plugins/.gitkeep",
-        "test/models/.gitkeep",
-        "test/views/.gitkeep",
-        "test/routes/.gitkeep",
         "test/middleware/.gitkeep",
-        "test/utils/.gitkeep"
+        "test/models/.gitkeep",
+        "test/plugins/.gitkeep",
+        "test/routes/.gitkeep",
+        "test/utils/.gitkeep",
+        "test/views/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
