--- a/package.json
+++ b/package.json
@@ -131,15 +131,15 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintrc.json",
         ".eslintignore",
+        ".eslintrc.json",
         ".gitignore",
         ".prettierignore",
         ".prettierrc.json",
         "license",
         "readme.md",
-        "commitlint.config.ts",
         "commit-template.hbs",
+        "commitlint.config.ts",
         "default-template.hbs",
         "emojitypescommitmessages.txt",
         "jest.config.json",
@@ -155,8 +155,8 @@
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
-        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
+        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
@@ -165,8 +165,8 @@
         ".github/workflows/docs.yml",
         ".github/workflows/lint.yml",
         ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
         ".github/workflows/test.yml",
+        ".github/workflows/release.yml",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
@@ -175,35 +175,35 @@
         ".husky/_/h",
         ".husky/_/post-applypatch",
         ".husky/_/post-commit",
+        ".husky/_/post-checkout",
         ".husky/_/post-merge",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
-        ".husky/_/post-checkout",
         ".husky/_/pre-auto-gc",
-        ".husky/_/pre-commit",
         ".husky/_/pre-push",
-        ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
+        ".husky/_/pre-rebase",
+        ".husky/_/pre-commit",
         "src/app.ts",
         "src/bin/.gitkeep",
         "src/configs/.gitkeep",
-        "src/middleware/.gitkeep",
         "src/controllers/.gitkeep",
+        "src/middleware/.gitkeep",
         "src/models/.gitkeep",
         "src/utils/.gitkeep",
-        "src/plugins/.gitkeep",
-        "src/views/.gitkeep",
         "src/routes/.gitkeep",
+        "src/views/.gitkeep",
+        "src/plugins/.gitkeep",
         "test/.gitkeep",
         "test/bin/.gitkeep",
-        "test/middleware/.gitkeep",
-        "test/plugins/.gitkeep",
         "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
+        "test/middleware/.gitkeep",
         "test/models/.gitkeep",
         "test/routes/.gitkeep",
         "test/utils/.gitkeep",
-        "test/views/.gitkeep"
+        "test/views/.gitkeep",
+        "test/plugins/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
