:ambulance: quickfix: fixed issues with lint errors
fixed the linting errors reported by ci/cd workflows

--- a/package.json
+++ b/package.json
@@ -134,76 +134,76 @@
         ".eslintrc.json",
         ".eslintignore",
         ".gitignore",
-        ".prettierignore",
         ".prettierrc.json",
+        ".prettierignore",
         "license",
         "readme.md",
-        "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
+        "commit-template.hbs",
         "emojitypescommitmessages.txt",
         "jest.config.json",
         "package-lock.json",
         "package.json",
         "release.config.ts",
         "renovate.json",
-        "tsconfig.json",
         "typedoc.json",
+        "tsconfig.json",
         ".vscode/settings.json",
         "public/.gitkeep",
-        "repo_management_files/cz-type-extract.js",
+        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
-        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/extractfilescopes.js",
         "repo_management_files/gitmojisemver-extract.js",
+        "repo_management_files/issues.sh",
+        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        "repo_management_files/cz-emoji-type-extract.js",
-        "repo_management_files/issues.sh",
-        ".husky/commit-msg",
-        ".husky/prepare-commit-msg",
-        ".husky/_/.gitignore",
-        ".husky/_/commit-msg",
-        ".husky/_/h",
-        ".husky/_/applypatch-msg",
-        ".husky/_/post-applypatch",
-        ".husky/_/post-checkout",
-        ".husky/_/post-merge",
-        ".husky/_/post-commit",
-        ".husky/_/post-rewrite",
-        ".husky/_/pre-applypatch",
-        ".husky/_/pre-commit",
-        ".husky/_/pre-push",
-        ".husky/_/pre-rebase",
-        ".husky/_/pre-auto-gc",
-        ".husky/_/prepare-commit-msg",
+        "repo_management_files/cz-type-extract.js",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
-        ".github/workflows/docs.yml",
         ".github/workflows/lint.yml",
+        ".github/workflows/docs.yml",
         ".github/workflows/pr.yml",
         ".github/workflows/release.yml",
         ".github/workflows/test.yml",
-        "test/.gitkeep",
-        "test/configs/.gitkeep",
-        "test/models/.gitkeep",
-        "test/controllers/.gitkeep",
-        "test/bin/.gitkeep",
-        "test/middleware/.gitkeep",
-        "test/plugins/.gitkeep",
-        "test/utils/.gitkeep",
-        "test/views/.gitkeep",
-        "test/routes/.gitkeep",
+        ".husky/commit-msg",
+        ".husky/prepare-commit-msg",
+        ".husky/_/applypatch-msg",
+        ".husky/_/.gitignore",
+        ".husky/_/commit-msg",
+        ".husky/_/post-applypatch",
+        ".husky/_/post-checkout",
+        ".husky/_/post-commit",
+        ".husky/_/post-rewrite",
+        ".husky/_/pre-applypatch",
+        ".husky/_/post-merge",
+        ".husky/_/pre-auto-gc",
+        ".husky/_/h",
+        ".husky/_/pre-commit",
+        ".husky/_/pre-push",
+        ".husky/_/pre-rebase",
+        ".husky/_/prepare-commit-msg",
         "src/app.ts",
-        "src/configs/.gitkeep",
-        "src/controllers/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/routes/.gitkeep",
-        "src/plugins/.gitkeep",
-        "src/utils/.gitkeep",
         "src/bin/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/utils/.gitkeep",
+        "src/models/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/middleware/.gitkeep",
         "src/views/.gitkeep",
-        "src/models/.gitkeep"
+        "test/.gitkeep",
+        "test/bin/.gitkeep",
+        "test/configs/.gitkeep",
+        "test/middleware/.gitkeep",
+        "test/controllers/.gitkeep",
+        "test/models/.gitkeep",
+        "test/plugins/.gitkeep",
+        "test/routes/.gitkeep",
+        "test/views/.gitkeep",
+        "test/utils/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
@@ -231,7 +231,7 @@
     "concurrently": "8.2.2",
     "conventional-changelog-gitmoji-config": "1.5.2",
     "cz-gitmoji-adapter": "2.0.0",
-    "eslint": "8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "18.0.0",
     "eslint-config-prettier": "9.1.0",
@@ -241,7 +241,7 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-security": "3.0.1",
     "five-server": "0.3.3",
-    "gitmoji-parser-opts": "^1.0.0",
+    "gitmoji-parser-opts": "1.0.0",
     "husky": "9.1.1",
     "jest": "29.7.0",
     "jest-snapshot": "29.7.0",
@@ -252,13 +252,13 @@
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.0.0",
     "quick-lint-js": "3.2.0",
-    "semantic-release": "<23",
+    "semantic-release": "22.0.12",
     "semantic-release-config-gitmoji": "1.5.3",
     "semantic-release-gitmoji": "1.6.5",
     "snyk": "1.1292.1",
     "sort-package-json": "2.10.0",
     "ts-jest": "29.2.3",
-    "typedoc": "0.26.4",
+    "typedoc": "0.26.5",
     "typedoc-plugin-coverage": "3.3.0"
   },
   "publishConfig": {
