:bug: fix(tsconfig.json): error with types fixed
fixed error with jest and bun-types

--- a/package.json
+++ b/package.json
@@ -131,69 +131,59 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintrc.json",
         ".eslintignore",
+        ".eslintrc.json",
         ".gitignore",
-        ".prettierrc.json",
         ".prettierignore",
+        ".prettierrc.json",
         "license",
         "readme.md",
         "commitlint.config.ts",
-        "default-template.hbs",
         "commit-template.hbs",
+        "default-template.hbs",
         "emojitypescommitmessages.txt",
         "jest.config.json",
         "package-lock.json",
         "package.json",
         "release.config.ts",
         "renovate.json",
-        "typedoc.json",
         "tsconfig.json",
+        "typedoc.json",
         ".vscode/settings.json",
         "public/.gitkeep",
         "repo_management_files/cz-emoji-type-extract.js",
+        "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
-        "repo_management_files/gitmojisemver-extract.js",
-        "repo_management_files/issues.sh",
         "repo_management_files/genericcommitmessages.md",
+        "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        "repo_management_files/cz-type-extract.js",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
+        "repo_management_files/gitmojisemver-extract.js",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
-        ".husky/_/applypatch-msg",
         ".husky/_/.gitignore",
-        ".husky/_/commit-msg",
-        ".husky/_/post-applypatch",
-        ".husky/_/post-checkout",
-        ".husky/_/post-commit",
-        ".husky/_/post-rewrite",
-        ".husky/_/pre-applypatch",
-        ".husky/_/post-merge",
-        ".husky/_/pre-auto-gc",
+        ".husky/_/applypatch-msg",
         ".husky/_/h",
+        ".husky/_/commit-msg",
+        ".husky/_/post-checkout",
+        ".husky/_/post-applypatch",
+        ".husky/_/post-commit",
+        ".husky/_/post-merge",
+        ".husky/_/pre-applypatch",
+        ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
         ".husky/_/pre-push",
         ".husky/_/pre-rebase",
+        ".husky/_/post-rewrite",
         ".husky/_/prepare-commit-msg",
-        "src/app.ts",
-        "src/bin/.gitkeep",
-        "src/controllers/.gitkeep",
-        "src/plugins/.gitkeep",
-        "src/configs/.gitkeep",
-        "src/utils/.gitkeep",
-        "src/models/.gitkeep",
-        "src/routes/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/views/.gitkeep",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
         "test/.gitkeep",
         "test/bin/.gitkeep",
         "test/configs/.gitkeep",
@@ -201,9 +191,19 @@
         "test/controllers/.gitkeep",
         "test/models/.gitkeep",
         "test/plugins/.gitkeep",
-        "test/routes/.gitkeep",
+        "test/utils/.gitkeep",
         "test/views/.gitkeep",
-        "test/utils/.gitkeep"
+        "test/routes/.gitkeep",
+        "src/app.ts",
+        "src/bin/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/utils/.gitkeep",
+        "src/views/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/models/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
@@ -225,6 +225,7 @@
     "@types/jest": "29.5.12",
     "@typescript-eslint/eslint-plugin": "7.16.1",
     "@typescript-eslint/parser": "7.16.1",
+    "bun-types": "1.1.20",
     "commitizen": "4.3.0",
     "commitlint": "19.3.0",
     "commitlint-config-gitmoji": "2.3.1",
