--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
-    "types": ["jest"],
+    "types": [
+      "bun-types", // add Bun global
+      "jest"
+    ],
     "outDir": "./dist",
     "esModuleInterop": true
   },
