--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "release:ci": "semantic-release",
     "security": "bunx snyk code test --all-projects || echo 'Issues were found please run: bunx snyk code test' && bunx snyk test --all-projects || echo 'Issues were found please run: bunx snyk test'",
     "security:fix": "snyk fix",
-    "test": "NODE_OPTIONS=--experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests",
     "test:changed": "bun run test -- --onlyChanged",
     "test:clear": "bun run test --clearCache",
     "test:dev": "bun run test:clear && bun run test:watch",
@@ -134,13 +134,13 @@
         ".eslintignore",
         ".eslintrc.json",
         ".gitignore",
-        ".prettierignore",
         ".prettierrc.json",
+        ".prettierignore",
         "license",
         "readme.md",
         "commitlint.config.ts",
-        "commit-template.hbs",
         "default-template.hbs",
+        "commit-template.hbs",
         "emojitypescommitmessages.txt",
         "jest.config.json",
         "package-lock.json",
@@ -156,54 +156,54 @@
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
         "repo_management_files/genericcommitmessages.md",
+        "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        "repo_management_files/gitmojisemver-extract.js",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
-        ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
-        ".husky/_/h",
+        ".husky/_/.gitignore",
         ".husky/_/commit-msg",
-        ".husky/_/post-checkout",
-        ".husky/_/post-applypatch",
+        ".husky/_/h",
         ".husky/_/post-commit",
+        ".husky/_/post-applypatch",
         ".husky/_/post-merge",
+        ".husky/_/post-checkout",
+        ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
-        ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
         ".husky/_/pre-push",
-        ".husky/_/pre-rebase",
-        ".husky/_/post-rewrite",
         ".husky/_/prepare-commit-msg",
+        ".husky/_/pre-rebase",
+        ".husky/_/pre-auto-gc",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
-        ".github/workflows/docs.yml",
         ".github/workflows/lint.yml",
+        ".github/workflows/docs.yml",
         ".github/workflows/pr.yml",
         ".github/workflows/release.yml",
         ".github/workflows/test.yml",
+        "src/app.ts",
+        "src/bin/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/models/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/views/.gitkeep",
+        "src/utils/.gitkeep",
         "test/.gitkeep",
         "test/bin/.gitkeep",
-        "test/configs/.gitkeep",
         "test/middleware/.gitkeep",
+        "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
         "test/models/.gitkeep",
         "test/plugins/.gitkeep",
-        "test/utils/.gitkeep",
-        "test/views/.gitkeep",
         "test/routes/.gitkeep",
-        "src/app.ts",
-        "src/bin/.gitkeep",
-        "src/configs/.gitkeep",
-        "src/controllers/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/plugins/.gitkeep",
-        "src/utils/.gitkeep",
-        "src/views/.gitkeep",
-        "src/routes/.gitkeep",
-        "src/models/.gitkeep"
+        "test/views/.gitkeep",
+        "test/utils/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
