:green_heart: fix-ci(.github/workflows/test.yml): removing some optional configs in test.yml
removed optional configs in test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,9 +46,9 @@ jobs:
       - name: 📤 📊 Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.5.0
         with:
-          fail_ci_if_error: true # optional (default = false)
-          files: ./coverage1.xml,./coverage2.xml # optional
-          flags: unittests # optional
+          #fail_ci_if_error: true # optional (default = false)
+          #files: ./coverage1.xml,./coverage2.xml # optional
+          #flags: unittests # optional
           name: ☂️ codecov-umbrella # optional
           token: ${{ secrets.CODECOV_TOKEN }} # required
           verbose: true # optional (default = false)
