:bug: fix(.github/workflows/test.yml): used env instead of token for codecov
using env now

--- a/package.json
+++ b/package.json
@@ -131,79 +131,79 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintignore",
         ".eslintrc.json",
+        ".eslintignore",
         ".gitignore",
-        ".prettierrc.json",
         ".prettierignore",
+        ".prettierrc.json",
         "license",
-        "commit-template.hbs",
-        "commitlint.config.ts",
         "readme.md",
+        "commitlint.config.ts",
+        "commit-template.hbs",
+        "default-template.hbs",
         "emojitypescommitmessages.txt",
         "jest.config.json",
-        "package.json",
-        "default-template.hbs",
         "package-lock.json",
         "release.config.ts",
+        "package.json",
         "renovate.json",
         "tsconfig.json",
         "typedoc.json",
         ".vscode/settings.json",
         "public/.gitkeep",
         "repo_management_files/cz-type-extract.js",
+        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/extractfilescopes.js",
-        "repo_management_files/cz-emoji-type-extract.js",
-        "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
+        "repo_management_files/issues.sh",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
-        ".husky/_/commit-msg",
         ".husky/_/h",
         ".husky/_/post-applypatch",
         ".husky/_/post-checkout",
         ".husky/_/post-commit",
         ".husky/_/post-merge",
+        ".husky/_/commit-msg",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
-        ".husky/_/pre-push",
-        ".husky/_/prepare-commit-msg",
         ".husky/_/pre-rebase",
+        ".husky/_/prepare-commit-msg",
+        ".husky/_/pre-push",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
         ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
         ".github/workflows/pr.yml",
-        "test/.gitkeep",
-        "test/bin/.gitkeep",
-        "test/configs/.gitkeep",
-        "test/middleware/.gitkeep",
-        "test/models/.gitkeep",
-        "test/plugins/.gitkeep",
-        "test/routes/.gitkeep",
-        "test/utils/.gitkeep",
-        "test/controllers/.gitkeep",
-        "test/views/.gitkeep",
+        ".github/workflows/release.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/test.yml",
         "src/app.ts",
         "src/bin/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/plugins/.gitkeep",
         "src/configs/.gitkeep",
-        "src/controllers/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/routes/.gitkeep",
         "src/utils/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/plugins/.gitkeep",
         "src/views/.gitkeep",
         "src/models/.gitkeep",
-        "src/routes/.gitkeep"
+        "test/.gitkeep",
+        "test/configs/.gitkeep",
+        "test/bin/.gitkeep",
+        "test/middleware/.gitkeep",
+        "test/controllers/.gitkeep",
+        "test/models/.gitkeep",
+        "test/plugins/.gitkeep",
+        "test/views/.gitkeep",
+        "test/routes/.gitkeep",
+        "test/utils/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
