--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,12 +44,11 @@ jobs:
         run: bun run test
 
       - name: 📤 📊 Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.5.0
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v4.0.1
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           #fail_ci_if_error: true # optional (default = false)
           #files: ./coverage1.xml,./coverage2.xml # optional
-          #flags: unittests # optional
+          flags: unittests # optional
           name: ☂️ codecov-umbrella # optional
           verbose: true # optional (default = false)
