--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,9 +46,10 @@ jobs:
       - name: 📤 📊 Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          #token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           #fail_ci_if_error: true # optional (default = false)
+          #file: ./coverage.xml # optional
           #files: ./coverage1.xml,./coverage2.xml # optional
-          flags: unittests # optional
+          #flags: unittests # optional
           name: ☂️ codecov-umbrella # optional
           verbose: true # optional (default = false)
