--- a/package.json
+++ b/package.json
@@ -131,15 +131,15 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintignore",
         ".eslintrc.json",
+        ".eslintignore",
         ".gitignore",
-        ".prettierignore",
         ".prettierrc.json",
         "license",
-        "readme.md",
+        ".prettierignore",
         "commit-template.hbs",
         "commitlint.config.ts",
+        "readme.md",
         "default-template.hbs",
         "emojitypescommitmessages.txt",
         "jest.config.json",
@@ -151,24 +151,17 @@
         "typedoc.json",
         ".vscode/settings.json",
         "public/.gitkeep",
-        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
+        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/genericcommitmessages.md",
-        "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
+        "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/packagejsondocument.md",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
-        ".husky/commit-msg",
         ".husky/prepare-commit-msg",
+        ".husky/commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
@@ -178,32 +171,39 @@
         ".husky/_/post-commit",
         ".husky/_/post-merge",
         ".husky/_/post-rewrite",
-        ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
         ".husky/_/pre-push",
-        ".husky/_/pre-rebase",
+        ".husky/_/pre-applypatch",
         ".husky/_/prepare-commit-msg",
+        ".husky/_/pre-rebase",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
         "src/app.ts",
         "src/bin/.gitkeep",
-        "src/configs/.gitkeep",
         "src/controllers/.gitkeep",
         "src/middleware/.gitkeep",
-        "src/models/.gitkeep",
         "src/plugins/.gitkeep",
+        "src/models/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/views/.gitkeep",
         "src/routes/.gitkeep",
         "src/utils/.gitkeep",
-        "src/views/.gitkeep",
         "test/.gitkeep",
-        "test/bin/.gitkeep",
-        "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
-        "test/middleware/.gitkeep",
-        "test/models/.gitkeep",
         "test/plugins/.gitkeep",
+        "test/models/.gitkeep",
+        "test/configs/.gitkeep",
+        "test/middleware/.gitkeep",
         "test/routes/.gitkeep",
-        "test/utils/.gitkeep",
-        "test/views/.gitkeep"
+        "test/views/.gitkeep",
+        "test/bin/.gitkeep",
+        "test/utils/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
