:bug: fix(.github/workflows/test.yml): using v3 of codecov action
switch to v3

--- a/package.json
+++ b/package.json
@@ -131,16 +131,16 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintrc.json",
         ".eslintignore",
+        ".eslintrc.json",
         ".gitignore",
         ".prettierignore",
         ".prettierrc.json",
         "license",
+        "readme.md",
         "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
-        "readme.md",
         "emojitypescommitmessages.txt",
         "jest.config.json",
         "package-lock.json",
@@ -150,6 +150,7 @@
         "tsconfig.json",
         "typedoc.json",
         ".vscode/settings.json",
+        "public/.gitkeep",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
@@ -159,7 +160,6 @@
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        "public/.gitkeep",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
         ".github/workflows/docs.yml",
@@ -186,25 +186,25 @@
         ".husky/_/prepare-commit-msg",
         "src/app.ts",
         "src/bin/.gitkeep",
-        "src/controllers/.gitkeep",
         "src/configs/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/middleware/.gitkeep",
         "src/models/.gitkeep",
         "src/plugins/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/views/.gitkeep",
-        "src/utils/.gitkeep",
         "src/routes/.gitkeep",
+        "src/utils/.gitkeep",
+        "src/views/.gitkeep",
         "test/.gitkeep",
         "test/app.test.ts",
         "test/bin/.gitkeep",
         "test/configs/.gitkeep",
+        "test/controllers/.gitkeep",
         "test/middleware/.gitkeep",
         "test/models/.gitkeep",
         "test/plugins/.gitkeep",
-        "test/controllers/.gitkeep",
-        "test/views/.gitkeep",
+        "test/routes/.gitkeep",
         "test/utils/.gitkeep",
-        "test/routes/.gitkeep"
+        "test/views/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
